--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,3 +5,9 @@ authors = ["Daniel Norman <daniel@gudtech.com>"]
 
 [dependencies]
 tokio_chat_common = { path = "../common" }
+futures = "0.1"
+tokio-core = "0.1"
+tokio-service = "0.1"
+tokio-proto = "0.1"
+tokio-tls = "0.1"
+native-tls = "0.1"
