--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
+authors = ["Daniel Norman <daniel@gudtech.com>"]
 name = "tokio_chat_client"
 version = "0.1.0"
-authors = ["Daniel Norman <daniel@gudtech.com>"]
 
 [dependencies]
-tokio_chat_common = { path = "../common" }
+futures = "0.1.8"
+serde_json = "0.8.4"
+tokio-core = "0.1.3"
+
+[dependencies.tokio_chat_common]
+path = "../common"
